test/classes/constructors/error-destructor-return-type.good
error-destructor-return-type.chpl:2: error: destructors may not declare a return type
