test/classes/constructors/error-destructor-return-type.chpl
class C{}
proc C.~C():void {}
